--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Open Coding
 description: "Class of 2029"
 owner_name: Flora Segale
 github_username: Flora-Segale27
-github_repo: "student" 
+github_repo: "Student" 
 baseurl: "/student" 
 future: true
 
