Change baseurl to '/Student' from '/student'

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: "Class of 2029"
 owner_name: Flora Segale
 github_username: Flora-Segale27
 github_repo: "Student" 
-baseurl: "/student" 
+baseurl: "/Student" 
 future: true
 
 # Build settings
